--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <nav>
             <ul>
                 <li><a href="index.html">menü</a></li>
-                <li class="legordulo"><a href="index.html">menü</a></li>
-                <ul class="legordulo-elem">
-                    <li><a href="#">almenü</a></li>
-                    <li><a href="#">almenü</a></li>
-                </ul>
+                <li class="legordulo"><a href="index.html">menü</a>
+                    <ul class="legordulo-elem">
+                        <li><a href="#">almenü</a></li>
+                        <li><a href="#">almenü</a></li>
+                    </ul>
+                </li>
                 <li><a href="index.html">menü</a></li>
             </ul>
         </nav>
