--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </ul>
         </nav>
         <article>
-
+            <img src="kepek/tajkep1.jpg" alt="tájkép">
+            <img src="kepek/tajkep2.jpg" alt="tájkép">
+            <img src="kepek/tajkep3.jpg" alt="tájkép">
         </article>
         <footer>
             <p>&copy; Máté Peti készitette</p>
