--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 </head>
 <body>
     <main>
-        <header>
-
-        </header>
         <nav>
             <ul>
                 <li><a href="index.html">menü</a></li>
@@ -25,9 +22,49 @@
             </ul>
         </nav>
         <article>
-            <img src="kepek/tajkep1.jpg" alt="tájkép">
-            <img src="kepek/tajkep2.jpg" alt="tájkép">
-            <img src="kepek/tajkep3.jpg" alt="tájkép">
+            <div class="kepek_rendezese">
+                <div class="kis_kepek">
+                    <img src="kepek/tajkep1.jpg" alt="tájkép">
+                </div>
+                <div class="kis_kepek">
+                    <img src="kepek/tajkep2.jpg" alt="tájkép">
+                </div>
+                <div class="kis_kepek">
+                    <img src="kepek/tajkep3.jpg" alt="tájkép">
+                </div>
+            </div>
+            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repudiandae. Illum odit ipsam tenetur iste nostrum non adipisci veniam maxime eum placeat quam nobis ut dolores, molestiae mollitia optio tempore!
+            Sequi sit animi officiis alias consequuntur, distinctio adipisci ipsum, perferendis itaque possimus, repudiandae laboriosam cumque necessitatibus quisquam magni? Assumenda neque qui maiores ea hic iure earum placeat maxime alias expedita.
+            Tempore quis optio dignissimos dolor maiores iure corrupti non saepe magnam repellat, accusamus quaerat deserunt excepturi. Dolor ullam autem accusamus dolorum. Deserunt error adipisci aliquam quam nobis temporibus totam nisi?
+            Dicta impedit quisquam eveniet veniam provident sit eligendi in? Voluptatum atque voluptate cumque deleniti, officiis ullam consequatur ut obcaecati nihil perspiciatis, quasi, aliquam amet laudantium consectetur magni molestiae reiciendis debitis.
+            Ex cum fugit provident ut molestiae officiis atque pariatur, aliquam quod eos facilis odio velit. Dicta accusantium recusandae iusto. Iure reiciendis molestiae rem nemo suscipit iusto porro corrupti cupiditate praesentium?
+            Mollitia, accusamus aliquid consequatur beatae est exercitationem ipsa laboriosam alias sequi aliquam neque voluptatum commodi iure harum. Quidem minus, reprehenderit soluta cum, perferendis voluptatum totam quae, hic quibusdam obcaecati consectetur?
+            Architecto aut magnam porro eum dignissimos sunt quidem dolorum soluta debitis earum dolorem tempore cupiditate, totam beatae, quod cum perspiciatis culpa quisquam sapiente eligendi fuga aspernatur ipsum ex! Enim, eius!
+            Consequuntur eos earum laboriosam eveniet, veritatis saepe sequi magni voluptatem, accusamus rerum aliquid, laudantium fugit quidem temporibus voluptatibus quas maxime id dignissimos corrupti? Earum sed, eos assumenda repellendus rerum eveniet.
+            Ea dignissimos dicta eius sunt consequatur repellendus tenetur, iste veniam quaerat dolorem repudiandae velit impedit beatae. Omnis, officia totam. In fugiat quaerat iste architecto, facere rerum ullam dicta necessitatibus harum?
+            Molestias nihil praesentium, voluptatum inventore perspiciatis eligendi quisquam saepe animi! Architecto dicta amet fugit ullam voluptates aliquid velit iure voluptatibus? Reprehenderit assumenda nihil at, laudantium voluptatem hic et non inventore.
+            Quas aperiam aut autem tempora ex animi maxime repellat facere nulla tempore, vitae praesentium, quibusdam ab deserunt adipisci expedita vero dicta possimus? Dolore doloribus necessitatibus nobis adipisci, quidem iusto dolores!
+            Ea, velit suscipit est aliquam iure similique, ex quae incidunt nulla quibusdam ipsam qui, aut explicabo eum nemo dicta quam fugit. Porro eaque, quos ipsum blanditiis dolore nemo impedit odio!
+            Nisi maiores sit illum obcaecati praesentium sed a laboriosam cumque minus tempore repellat dolorum sapiente necessitatibus quaerat, cum molestiae incidunt deleniti! Molestias consequuntur exercitationem error impedit corporis unde perferendis dolorem!
+            Fuga eos beatae perferendis ipsum veniam voluptas expedita, asperiores harum, illo earum eum modi voluptatum itaque? Esse, eum modi iusto totam hic minima animi tempore molestiae porro eius ipsa in.
+            Sunt itaque repellendus, vitae, veniam reprehenderit doloremque perferendis accusantium nobis officiis ab, assumenda blanditiis numquam alias voluptatum nihil perspiciatis voluptas iusto temporibus voluptate. Sint porro est dolor harum corporis minima.
+            Dicta ut accusantium, impedit iusto accusamus cum nobis facere voluptatum sequi quibusdam ullam culpa amet. Quae voluptas autem praesentium repudiandae qui dolorum, delectus facilis consequuntur dignissimos maiores repellendus distinctio laborum?
+            Quibusdam consectetur iste itaque explicabo quas magni, officiis quo in pariatur incidunt ut quidem, quae reiciendis optio nesciunt vero dicta nisi. Beatae ipsum unde similique architecto suscipit sed eveniet at.
+            Harum optio dolorem quisquam voluptatibus perspiciatis tenetur voluptate minima explicabo voluptatem, rem sequi vel eligendi aliquid exercitationem porro expedita animi placeat. Cumque libero numquam nobis ipsa quod facere fuga officia?
+            Incidunt veniam ab tenetur laboriosam aspernatur? Velit consectetur voluptate fugit voluptatem error vero provident? Deserunt iusto sint quas tenetur, officiis sunt quisquam, modi ipsum, facilis distinctio cupiditate nam voluptatibus facere.
+            Praesentium id, asperiores sint aliquid temporibus ratione eum exercitationem quo assumenda, autem minima officiis! Eos, quasi. Soluta earum, eum est vitae perspiciatis sit, provident autem nulla eaque possimus aliquam porro?
+            Quae ab, provident iusto quod accusantium doloribus nisi dolorum repellendus tempora temporibus magni numquam accusamus maiores, aliquam fuga quis nemo est similique cum aperiam eum officia facilis? Sit, laudantium delectus!
+            Perferendis nesciunt aliquid quasi eius repudiandae! Nulla molestiae quisquam, rem enim ut ipsa natus labore, est dolorum harum provident ad illo unde quibusdam iste obcaecati, maxime quasi! In, dolore laborum!
+            Repudiandae laborum aliquid accusamus, minima corporis rem, quae, voluptatum dolorum aut dolores dicta reprehenderit veniam perspiciatis tenetur consectetur asperiores! Ullam eligendi quis repellendus consequuntur possimus vitae et tenetur provident qui!
+            Dolore quod amet magni, eius minima, quis tempore libero possimus odit ducimus obcaecati. Fugiat nemo, cum illum officia repellendus natus deserunt incidunt. Quas, repudiandae est quaerat esse pariatur quia aperiam?
+            Dolor magnam ad voluptatum, id animi consequatur in est quaerat ab impedit vero incidunt obcaecati quibusdam voluptate aut ut voluptatem temporibus nisi necessitatibus doloremque amet sit! Incidunt excepturi laboriosam maiores.
+            Doloremque harum non earum recusandae aliquid et eos ipsum ad sit, consequuntur nesciunt debitis sint quis deleniti culpa. Molestiae odio cum unde rem expedita illo tempora aspernatur, perferendis earum. Mollitia?
+            Quo dicta fugiat ut laboriosam quis beatae asperiores in impedit autem maiores ducimus, ipsum necessitatibus eligendi adipisci atque hic id nulla veritatis aspernatur? Voluptatem fuga rerum, quam officiis minus quaerat!
+            Laudantium voluptatum, voluptatibus, vel eos labore adipisci eius pariatur tempore magni nobis possimus, aspernatur earum! Reprehenderit officiis facere repellendus. Non ullam nemo ex neque officia accusamus. Voluptates placeat labore quis.
+            Quas veritatis, corporis quibusdam quos illum maiores ullam. Nam nobis adipisci corrupti tempore sit harum est eaque consectetur nulla, incidunt sapiente exercitationem quis quae officia nesciunt in quas provident vel!
+            Labore excepturi, quisquam in a culpa molestiae magni nobis corrupti qui laborum dignissimos maiores facilis eum impedit reprehenderit. Fugit minima ullam nisi. Quas minima, debitis non atque quod distinctio veritatis.</p>
+
         </article>
         <footer>
             <p>&copy; Máté Peti készitette</p>
