--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 <body>
     <main>
-        <nav>
-            <ul>
-                <li><a href="index.html">menü</a></li>
-                <li class="legordulo"><a href="index.html">menü</a>
-                    <ul class="legordulo-elem">
-                        <li><a href="#">almenü</a></li>
-                        <li><a href="#">almenü</a></li>
-                    </ul>
-                </li>
-                <li><a href="index.html">menü</a></li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">menü</a></li>
+                    <li class="legordulo"><a href="index.html">menü</a>
+                        <ul class="legordulo-elem">
+                            <li><a href="#">almenü</a></li>
+                            <li><a href="#">almenü</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="index.html">menü</a></li>
+                </ul>
+            </nav>
+        </header>
+        
         <article>
+            <h2>Position</h2>
+
             <div class="kepek_rendezese">
                 <div class="kis_kepek">
                     <img src="kepek/tajkep1.jpg" alt="tájkép">
@@ -32,6 +37,10 @@
                 <div class="kis_kepek">
                     <img src="kepek/tajkep3.jpg" alt="tájkép">
                 </div>
+            </div>
+
+            <div class="nagy_kep">
+
             </div>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repudiandae. Illum odit ipsam tenetur iste nostrum non adipisci veniam maxime eum placeat quam nobis ut dolores, molestiae mollitia optio tempore!
