--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
             <div class="kepek_rendezese">
                 <div class="kis_kepek">
                     <img src="kepek/tajkep1.jpg" alt="tájkép">
+                    <div class="megjelen"><img src="kepek/tajkep1.jpg" alt="tájkép "></div>
                 </div>
                 <div class="kis_kepek">
                     <img src="kepek/tajkep2.jpg" alt="tájkép">
+                    <div class="megjelen">
+                        <img src="kepek/tajkep2.jpg" alt="tájkép">
+                    </div>
                 </div>
                 <div class="kis_kepek">
                     <img src="kepek/tajkep3.jpg" alt="tájkép">
+                    <div class="megjelen"><img src="kepek/tajkep3.jpg" alt="tájkép"></div>
                 </div>
             </div>
 
