--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
                 </div>
             </div>
 
-            <div class="nagy_kep">
-                
-            </div>
-
             <section class="keret">
                 <div id="ablak">
                     <form>
@@ -70,4 +66,11 @@
         </footer>
     </main>
 </body>
+<script>
+    function bezar()
+    {
+        console.console.log("hahó");
+        document.getElementById("ablak").style.display="none";
+    }
+</script>
 </html>
